Fix: Bot message padding/alignment

--- a/CSS/Pages/Chat/chat.css
+++ b/CSS/Pages/Chat/chat.css
@@ -15,7 +15,7 @@
 .chat-history {
     flex-grow: 1;
     overflow-y: auto;
-    padding: 1vw;
+    padding: 1rem;
     background-color: #D6EFD8;
 }
 
@@ -29,7 +29,6 @@
 .bot-message {
     margin-left: 0%;
     max-width: 100%;
-    align-self: flex-start;
     display: flex;
     align-items: center;
 }
@@ -86,14 +85,13 @@
 }
 
 #logo {
-    width: 1.5em;
-    height: 1.5em;
-    margin-top: 2%;
+    width: 2rem;
+    height: 2rem;
     background-color: #1A5319;
     display: inline-block;
     margin-right: 10px;
     flex-shrink: 0;
-    align-self: flex-start;
+    align-self: center;
 }
 
 .learn-more-button {
@@ -106,17 +104,4 @@
 
 .learn-more-button:hover {
     background-color: #80AF81;
-}
-
-@media (max-width: 768px) {
-    .chat-container {
-        width: 100vw;
-    }
-}
-
-@media (min-width: 768px) and (max-width: 1024px) {
-    .chat-container {
-        width: 100vw;
-    }
-
 }
